PeerConnectionObserver can spontaneously go away when network is lost
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox68 | --- | fixed |
People
(Reporter: bwc, Assigned: bwc)
References
Details
Attachments
(1 file)
Noticed this while trying to repro bug 1546562 on a local build. My daily-use nightly reproduced the bug fine, but the local build never fired an ICE disconnected event. I went poking around for some preference that I might have left set, and switching from system proxy settings to no proxy got the signal to fire. Very odd.
| Assignee | ||
Comment 1•6 years ago
|
||
I've investigated this further, and it seems that sometimes the loss of network can cause the PeerConnectionObserver to spontaneously go away, without the PeerConnection being closed. Specifically, calls like these yield a nullptr:
Does loss of network break some step of this?
Or is the PeerConnectionObserver actually going away here?
| Assignee | ||
Comment 2•6 years ago
|
||
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
Try looks fine. I might be able to remove some more code.
| Assignee | ||
Comment 5•6 years ago
|
||
Updated•6 years ago
|
| Assignee | ||
Comment 6•6 years ago
|
||
Try looks like a mess, but it is already known intermittents.
Comment 8•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Description
•