Bug 1546691: Avoid the PCObserver going away spontaneously when network is lost. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D28839